zero-schema-derive/tests/ui/fail/04_scalar_invalid.stderr
error: scalar enums require exactly one #[repr(u8)], #[repr(u16)], or #[repr(u32)]
 --> tests/ui/fail/04_scalar_invalid.rs:2:41
  |
2 | #[derive(ZeroSchema)] #[repr(i16)] enum Repr { A=1 }
  |                                         ^^^^

error: scalar enum variants must be fieldless
 --> tests/ui/fail/04_scalar_invalid.rs:3:50
  |
3 | #[derive(ZeroSchema)] #[repr(u8)] enum Payload { A(u8) }
  |                                                  ^

error: scalar enum variants require explicit discriminants
 --> tests/ui/fail/04_scalar_invalid.rs:3:50
  |
3 | #[derive(ZeroSchema)] #[repr(u8)] enum Payload { A(u8) }
  |                                                  ^

error: scalar enum variants require explicit discriminants
 --> tests/ui/fail/04_scalar_invalid.rs:4:50
  |
4 | #[derive(ZeroSchema)] #[repr(u8)] enum Missing { A }
  |                                                  ^
